# deepdelve

./: .gitignore  CLAUDE.md  LICENSE  README.md  RESEARCH.md  ROADMAP.md  SESSION_STATUS.md  pyproject.toml  test_structural_checks.py
.github/workflows/: ci.yml
eval/: colombia_b2b_benchmark.md  dataset.jsonl  eval_config.yaml  evaluate.py  results.jsonl  results_viewer.py  sales_forecasting_benchmark.md
eval/reference/: colombia_b2b_niches_2026_reference.md  sales_forecasting_deepseek.md
finetune/: evaluate_citation_grounding.py  evaluate_combined.py  extract_agent_routing_dataset.py  extract_dataset.py  generate_synthetic_citation_prompts.py  generate_synthetic_prompts.py  minicpm_tool_proxy.py  minicpm_tool_test.py  reward.py  train_agent_routing_classifier.py  train_citation_grounding_grpo.py  train_combined_grpo.py  train_thin_coverage_grpo.py
finetune/artifacts/: agent_routing_classifier.joblib
finetune/data/: agent_routing.jsonl  agent_routing_conflicting.jsonl  agent_routing_hallucinated.jsonl  agent_routing_heldout.jsonl  citation_grounding.jsonl  citation_grounding_heldout_prompts.jsonl  citation_grounding_synthetic_prompts.jsonl  thin_coverage.jsonl  thin_coverage_heldout_prompts.jsonl  thin_coverage_synthetic_prompts.jsonl  tool_name.jsonl  writer_role.jsonl
src/: app.py  config.py  config_template.yaml  prompts.py
src/engine/: completion.py  orchestrator.py  sdk.py  tui.py
src/tools/: __init__.py  config_template.yaml  core.py  data.py  fs.py  mcp_loader.py  meta.py  rag.py  todos.py  web.py
src/utils/: agent_routing.py  browser_fetch.py  grounding.py  knowledge_cache.py  parsers.py  rag_cache.py  run_state.py
