[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepdelve"
version = "0.1.0"
description = "A locally-run, multi-agent deep research assistant with domain-specialized Searcher/Analyzer panels (Planner -> {WebSearcher,AcademicSearcher} -> {DocumentAnalyzer,DataAnalyzer})."
authors = [{name = "Local Agent Builder"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agent-framework",
    "httpx",
    "textual",
    "beautifulsoup4",
    "PyYAML",
    "ddgs",
    # [all] is unresolvable on Windows/Python 3.14 (onnxruntime + youtube-transcript-api pins) and
    # silently falls back to the useless 0.0.2 stub; these doc extras are all this agent uses.
    "markitdown[pdf,docx,xlsx,pptx]>=0.1.6",
    # Imported directly in engine/sdk.py (SubAgentConfig/AgentBuilder). Currently only installed
    # transitively via agent-framework, which is fragile — declare it explicitly so this doesn't
    # silently break if agent-framework ever drops or reshuffles its own pydantic dependency.
    "pydantic"
]

[project.scripts]
deepdelve = "app:cli_main"

# src-layout, but rooted so the installed package tree matches the bare top-level imports used
# throughout the codebase (`import config`, `from tools import ...`, `from engine.tui import
# ...`) — those only resolved when running from the checkout (`python src/app.py` puts `src/`
# itself on sys.path). The old `packages = ["src", "src.tools", ...]` installed everything under
# a literal top-level package named `src`, so only `import src.tools` etc. would have worked post
# pip-install; the `deepdelve` console script (which has no "run from src/" trick to lean on)
# could never actually import its own modules. Fixed by rooting the install AT src/ instead of
# treating src/ itself as a package (its __init__.py, which did nothing, is removed) — everything
# under src/ installs at the top level of site-packages, matching every existing import statement
# unchanged. Second full audit, 2026-07-12, item 5.
[tool.setuptools]
package-dir = {"" = "src"}
packages = ["tools", "engine", "utils"]
py-modules = ["app", "config", "prompts"]

# config.py's load_config() locates the bundled template via os.path.join(os.path.dirname(
# __file__), "tools", "config_template.yaml") — it lives inside the real "tools" package (moved
# there from directly under src/) specifically so package-data can bundle it: py-modules (loose
# top-level files like config.py itself, no __init__.py) aren't covered by
# [tool.setuptools.package-data], which only attaches data files to actual packages.
[tool.setuptools.package-data]
tools = ["config_template.yaml"]
