[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepdelve"
version = "0.1.0"
description = "A locally-run, multi-agent deep research assistant with domain-specialized Searcher/Analyzer panels (Planner -> {WebSearcher,AcademicSearcher} -> {DocumentAnalyzer,DataAnalyzer})."
authors = [{name = "Gabri Elles", email = "ellesgabry5@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
# Floor+ceiling pins (second full audit item E12, 2026-07-12): previously only markitdown was
# pinned. Floors are the versions actually verified working this session (`pip show` against the
# dev venv); ceilings block the next major version, the boundary most likely to carry breaking
# changes, without freezing out routine minor/patch updates. agent-framework was documented
# elsewhere as "pre-1.0" — that was stale; it's 1.11.0 as of this pin, already past its 1.0
# stability line, but still the dependency most likely to break this project's actual usage
# (SubAgentConfig/AgentBuilder, ResponseStream's async iterator protocol) on a major bump.
dependencies = [
    "agent-framework>=1.11.0,<2.0.0",
    "httpx>=0.28.1,<0.29.0",
    "textual>=8.2.8,<9.0.0",
    "beautifulsoup4>=4.15.0,<5.0.0",
    "PyYAML>=6.0.3,<7.0.0",
    # A scraper, not a stable API — pinned tighter than the rest given how directly DDG-side
    # HTML/engine changes have broken this project's search layer before (see README/ROADMAP
    # search_backend notes).
    "ddgs>=9.14.4,<10.0.0",
    # [all] is unresolvable on Windows/Python 3.14 (onnxruntime + youtube-transcript-api pins) and
    # silently falls back to the useless 0.0.2 stub; these doc extras are all this agent uses.
    "markitdown[pdf,docx,xlsx,pptx]>=0.1.6,<0.2.0",
    # Imported directly in engine/sdk.py (SubAgentConfig/AgentBuilder). Currently only installed
    # transitively via agent-framework, which is fragile — declare it explicitly so this doesn't
    # silently break if agent-framework ever drops or reshuffles its own pydantic dependency.
    "pydantic>=2.13.4,<3.0.0",
    # First ML/NLP inference dependency this project has ever taken on (2026-07-12) — used only
    # for utils/grounding.py's nli_unsupported_problem (settings.grounding_check.nli_verify), a
    # small CPU-only NLI entailment classifier that verifies a claim is actually supported by its
    # cited source's content, not just term-overlapping with it. `pip install sentence-transformers`
    # alone pulls the full CUDA-enabled torch build (~6GB) even though inference is explicitly
    # device="cpu" in code and never touches the GPU — install the CPU-only torch wheel FIRST from
    # PyTorch's dedicated index (`pip install torch --index-url https://download.pytorch.org/whl/cpu`)
    # to get the ~200MB CPU build instead, THEN this. Fails open at runtime if unavailable (see
    # grounding.py::_get_nli_model) — an environment that skips this dependency entirely still
    # runs every other check unaffected, it just never gets the NLI verification layer.
    "sentence-transformers>=5.6.0,<6.0.0"
]

[project.optional-dependencies]
dev = ["ruff"]

[project.scripts]
deepdelve = "app:cli_main"

# src-layout, but rooted so the installed package tree matches the bare top-level imports used
# throughout the codebase (`import config`, `from tools import ...`, `from engine.tui import
# ...`) — those only resolved when running from the checkout (`python src/app.py` puts `src/`
# itself on sys.path). The old `packages = ["src", "src.tools", ...]` installed everything under
# a literal top-level package named `src`, so only `import src.tools` etc. would have worked post
# pip-install; the `deepdelve` console script (which has no "run from src/" trick to lean on)
# could never actually import its own modules. Fixed by rooting the install AT src/ instead of
# treating src/ itself as a package (its __init__.py, which did nothing, is removed) — everything
# under src/ installs at the top level of site-packages, matching every existing import statement
# unchanged. Second full audit, 2026-07-12, item 5.
[tool.setuptools]
package-dir = {"" = "src"}
packages = ["tools", "engine", "utils"]
py-modules = ["app", "config", "prompts"]

# config.py's load_config() locates the bundled template via os.path.join(os.path.dirname(
# __file__), "tools", "config_template.yaml") — it lives inside the real "tools" package (moved
# there from directly under src/) specifically so package-data can bundle it: py-modules (loose
# top-level files like config.py itself, no __init__.py) aren't covered by
# [tool.setuptools.package-data], which only attaches data files to actual packages.
[tool.setuptools.package-data]
tools = ["config_template.yaml"]

# Pragmatic rule set, not maximal (second full audit, 2026-07-12): pure pyflakes (F) — unused
# imports/variables, undefined names, duplicate dict keys — catches real dead-code issues (the
# same class the fresh audit turned up by hand in tools/web.py's PDF-detection branch) without
# fighting this project's established style: dense, evidence-heavy comment lines well past 79/120
# chars (CLAUDE.md/ROADMAP's own voice), and function-local imports used deliberately throughout
# for lazy loading / avoiding circular imports (which E402/I001 would otherwise flag by the
# hundreds — checked: 150 line-length + 39 import-sort hits on a first pragmatic-but-broader pass,
# almost entirely style noise, not real issues). pycodestyle (E) intentionally left out.
[tool.ruff]
exclude = ["venv", "research_output", "build", "*.egg-info"]

[tool.ruff.lint]
select = ["F"]
